--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 DB_HOST = localhost
-DB_USERNAME = root
-DB_PASSWORD = root
-DB_DATABASE = belajar_nest_js
-DB_PORT = 3307
+DB_USERNAME = "root"
+DB_PASSWORD = ""
+DB_DATABASE = "belajar_nestjs"
+DB_PORT = 3306
 
 
 //JWT
